--- a/themes/yilia-plus/layout/_partial/footer.ejs
+++ b/themes/yilia-plus/layout/_partial/footer.ejs
@@ -6,12 +6,12 @@
     	</div>
       	<div class="footer-right">
 			<%# "页脚 Litten(此配置项已弃用)" %>
-			<% var defaultFooter = 'GitHub:<a href="https://github.com/JoeyBling/hexo-theme-yilia-plus" target="_blank">hexo-theme-yilia-plus</a>'; %>
+			<% var defaultFooter = 'GitHub:<a href="https://hexo.io/zh-cn/index.html" target="_blank">hexo</a> & <a href="https://github.com/JoeyBling/hexo-theme-yilia-plus" target="_blank">yilia-plus</a>'; %>
       		<%-defaultFooter %> by Litten
       	</div>
     </div>
   </div>
-  
+
   <% if (theme.busuanzi && theme.busuanzi.enable){ %>
 	<script src="<%- url_for('lib/busuanzi.pure.js') %>"></script>
 	<%# "<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>" %>
@@ -19,7 +19,7 @@
   <% if (theme.busuanzi && theme.busuanzi.enable && theme.busuanzi.site_visit){ %>
 	<%# "不蒜子统计" %>
 	<span id="busuanzi_container_site_pv" style="display:none">
-		本站总访问量<span id="busuanzi_value_site_pv"></span>次	
+		本站总访问量<span id="busuanzi_value_site_pv"></span>次
 	        <span class="post-meta-divider" >|</span>
 	</span>
   	<span id="busuanzi_container_site_uv" style='display:none'>
